--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,10 +2,14 @@
     border-bottom: 3px solid black;
     font-family:"sans-serif";
     font-size: 30px;;
+    background-color: aqua;
+    margin-left: 200px;
+    margin-right: 200px;
   }
 
   .header-logo{
     color:blue;
+    margin-left: 200px;
   }
 
   .header-list{
@@ -15,6 +19,10 @@
     color:black;
   }
 
+   .main{
+    margin-left: 300px;
+  }
+
   .header p{
     padding-bottom: 20px;
     font-size: 25px;
@@ -22,6 +30,7 @@
 
   .hooter{
     background-color: rgba(255, 126, 126, 0.867);
+    margin-left: 300px;
   }
 
   .yahoo{
